; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/tests/extr_packetProcessing.c_test_AcceptNoSentPacketBroadcastMode.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/tests/extr_packetProcessing.c_test_AcceptNoSentPacketBroadcastMode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@AUTHENTICATION = common dso_local global i32 0, align 4
@LEAP_NOWARNING = common dso_local global i32 0, align 4
@NTP_VERSION = common dso_local global i32 0, align 4
@MODE_BROADCAST = common dso_local global i32 0, align 4
@testpkt = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4
@LEN_PKT_NOMAC = common dso_local global i32 0, align 4
@testsock = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"UnitTest\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_AcceptNoSentPacketBroadcastMode() #0 {
  %1 = load i32, i32* @AUTHENTICATION, align 4
  %2 = call i32 @ENABLED_OPT(i32 %1)
  %3 = call i32 @TEST_ASSERT_FALSE(i32 %2)
  %4 = load i32, i32* @LEAP_NOWARNING, align 4
  %5 = load i32, i32* @NTP_VERSION, align 4
  %6 = load i32, i32* @MODE_BROADCAST, align 4
  %7 = call i32 @PKT_LI_VN_MODE(i32 %4, i32 %5, i32 %6)
  store i32 %7, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @testpkt, i32 0, i32 0, i32 0), align 4
  %8 = load i32, i32* @LEN_PKT_NOMAC, align 4
  %9 = load i32, i32* @LEN_PKT_NOMAC, align 4
  %10 = load i32, i32* @MODE_BROADCAST, align 4
  %11 = call i32 @process_pkt(%struct.TYPE_4__* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @testpkt, i32 0, i32 0), i32* @testsock, i32 %9, i32 %10, i32* null, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %12 = call i32 @TEST_ASSERT_EQUAL(i32 %8, i32 %11)
  ret void
}

declare dso_local i32 @TEST_ASSERT_FALSE(i32) #1

declare dso_local i32 @ENABLED_OPT(i32) #1

declare dso_local i32 @PKT_LI_VN_MODE(i32, i32, i32) #1

declare dso_local i32 @TEST_ASSERT_EQUAL(i32, i32) #1

declare dso_local i32 @process_pkt(%struct.TYPE_4__*, i32*, i32, i32, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
